# Laba_3_oop

./: CMakeLists.txt  README.md
include/: figure.h  point.h  rectangle.h  square.h  triangle.h  vector-figure.h  vector-points.h
src/: figure.cpp  main.cpp  point.cpp  rectangle.cpp  square.cpp  triangle.cpp  vector-figure.cpp  vector-points.cpp
tests/: test_figures.cpp  test_point.cpp  test_vectors.cpp
